# napari-bioformats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/napari_bioformats/: __init__.py  _plugin.py  _series_selector.py  napari.yaml
